v342/downloads.md
---
title: Downloads
---
Don't forget to read the [NetHack 3.4.2 release notes](release.html)!

* table of contents
{:toc}

---

## Windows

[nh342win3.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342win3.zip/download)
: Contains two executables - an Intel Win32 tty console executable and an Intel Win32 Graphical Interface executable.  This may be used on Intel machines running Windows 95, 98, Me, NT 4.0, Windows 2000, and Windows XP.

**Some people have attempted to run the game from *inside* an unzip utility - this will not work.  You *must* extract the contents of the .zip file to a new folder and run the game from that folder.**

**Do not copy the game to your desktop; create a shortcut instead.**

([Windows download instructions.](ports/download-win.html))

---

## Macintosh

There are several binaries available for the Mac: you only need one of the following packages.

Sorry, these binaries will not run on 68K-based Macs.

[NetHack-3.4.2-2-MacOSX.tar.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/NetHack-3.4.2-2-MacOSX.tar.gz/download)
: NetHack 3.4.2 for PPC Macintosh running MacOS 10.x.  This version uses Qt to provide a tiles (graphical) display.

[nethack-342-mac-term.pkg.sit](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nethack-342-mac-term.pkg.sit/download)
: NetHack 3.4.2 for PPC Macintosh running MacOS 10.x.  This version is a very traditional NetHack that runs in text mode from the command line.

([Macintosh download instructions.](ports/download-mac.html))

---

## Linux

If you have problems running these binaries due to missing libraries, check the System information in the [README.linux](README.linux.txt) file for a list of dependencies.

[nh342lin.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342lin.tgz/download)
: NetHack 3.4.2 Linux Elf with TTY and Athena-widget-based (traditional X11) graphics interfaces (including tiles).  This version requires glibc-2.3 and X11 libraries.

[nethack-3.4.2-1.i386.rpm](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nethack-3.4.2-1.i386.rpm/download)
: Same thing in RPM format.

[nethack-3.4.2-1qt.i386.rpm](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nethack-3.4.2-1qt.i386.rpm/download)
: NetHack 3.4.2 Linux Elf with Qt-based graphics interfaces (including tiles).  This version requires the Qt libraries (version 2.x) which may or may not be installed on any particular Linux system.  This version should run on Redhat 9 and Suse 8.

([Linux download instructions.](ports/download-linux.html))

---

## MS-DOS

[nh342dos.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342dos.zip/download)
: This contains the protected-mode version of NetHack built with DJGPP V2.  It requires at least 3MB extended memory and at least 2.8MB of free hard drive space to unzip.  A '386 or greater processor is needed.

It requires DPMI to run.  If you want to run it on plain DOS you can get [CWSDPMI](http://www.delorie.com/djgpp/dl/ofc/simtel/v2misc/csdpmi5b.zip), unpack it, and put the CWSDPMI executable in your NetHack directory.

Note: There is no real-mode overlaid binary distribution of NetHack 3.4.2.

([MS-DOS download instructions.](ports/download-msdos.html))

---

## Windows CE

These installer packages must be downloaded to, and run on, a Microsoft Windows computer, not on the target Windows CE system.

[nh342ce-ppc.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342ce-ppc.exe/download)
: NetHack 3.4.2 installer package for *PocketPC* platform (Windows CE 3.0, PocketPC 2000 and PocketPC 2002).

[nh342ce-hpc.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342ce-hpc.exe/download)
: NetHack 3.4.2 installer package for *Handheld PC Professional* running Windows 2.11 or higher.

[nh342ce-ps211.exe](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342ce-ps211.exe/download)
: NetHack 3.4.2 installer package for the *Palm Size PC* running Windows CE 2.11.

[nh342sph.ARM.CAB](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342sph.ARM.CAB/download)
: Experimental NetHack 3.4.2 installer package for the *Smartphone 2002*.  This is an *unsigned* CAB so you will need an *unlocked* version of your phone to install it and run the program (e.g. a *developer* version of the Orange SPV).  It has never been tried on the actual device so your feedback is greatly appreciated.

The installer packages above were created with [EZSetup by Scott Ludwig](http://www.scottlu.com/Content/EZSetup.html).

([Windows CE download instructions.](ports/download-wince.html))

---

## OS/2

Official NetHack 3.4.2 binaries for Intel 386 compatible machines running OS/2.

[nh342os2.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342os2.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d.  In principle it should be runnable on OS/2 version 2.0 or later but has not been tested on any version other than 4.0.

[nh342os2x11.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342os2x11.zip/download)
: This file packaged with InfoZip 5.x contains a 32-bit binary built using EMX 0.9d and requires the EMX runtime libraries and dynamically linked against the XFree86 libraries for OS/2.  It requires that these libraries along with XAW.dll be installed to function and will run in both text mode and X11 tiles mode.

([OS/2 download instructions.](ports/download-os2.html))

---

## Amiga

[nh342ami-2.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342ami-2.lha/download)
: NetHack 3.4.2 for 68K-based Amiga.  This binary runs on any Amiga with AmigaDOS 3.0 or later.  It might work on systems as early as AmigaDOS 2.05.

[nh342mos.lha](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342mos.lha/download)
: NetHack 3.4.2 for PPC-based Amiga running MorphOS.

([Amiga download instructions.](ports/download-amiga.html))

---

## Atari

[nh342gt.lzh](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh342gt.lzh/download)
: NetHack 3.4.2 for Ataris running TOS, MiNT or MagiC.  This is a GEM (tiles) and TTY (plain text only) port of NetHack.  It requires at least 2MB free memory and at least 3MB of free hard drive space.

([Atari download instructions.](ports/download-atari.html))

---

## Source Code

Alternatively, you can clone our [code repository]({{ site.code_repository_url }}) for the latest version of NetHack, or any other version by its tag; see [How to Contribute]({{ site.baseurl }}/how-to-contribute.html#editing-the-source-code) for more details.

[nethack-342.tgz](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nethack-342.tgz/download)
: NetHack 3.4.2 source release.

[nethack-342-ce.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nethack-342-ce.zip/download)
: NetHack 3.4.2 Win CE and Smartphone compiler project files.  (Only needed to compile for Windows CE and Smartphone platforms.)

[nh341-342-diffs.gz](http://sourceforge.net/projects/nethack/files/nethack/3.4.2/nh341-342-diffs.gz/download)
: Context diff from version 3.4.1.  (If you don't know what this is, you don't need it.)

([Source code download instructions.](download-src.html))

---

## Large tiles (optional)

[tiles32.zip](http://sourceforge.net/projects/nethack/files/nethack/3.4.0/tiles32.zip/download)
: A set of 32 x 32 tiles (that is, larger than the default graphics set).

To use this tileset, extract it to the same directory/folder as NetHack, then add the following line to your config file:

```
OPTIONS=tile_file:tiles32.bmp, tile_width:32, tile_height:32
```
